# bet_on_self

./: .gitignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
server/: package.json  stellar-server.js
src/: sample-data.ts  types.ts
src/app/: layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/admin/view-user/[id]/: AdminUserView.tsx  page.tsx
src/app/api/admin/enroll-course/: route.ts
src/app/api/admin/unenroll-course/: route.ts
src/app/api/bets/: route.ts
src/app/api/courses/: route.ts
src/app/api/grades/: route.ts
src/app/api/odds/update/: route.ts
src/app/api/place-bet/: route.ts
src/app/api/predict/: route.ts
src/app/api/resolve-course/: route.ts
src/app/api/user-courses/: route.ts
src/app/bets/: dashboard-client.tsx  page.tsx  table-client.tsx
src/app/content/[id]/: page.tsx
src/components/: content-card.tsx  navbar-client.tsx  navbar.tsx
src/lib/: stellar-wallet.ts  user-data.ts
stellar/: Cargo.toml  deploy.sh
stellar/contracts/: goal_escrow.rs  oracle.rs  reward_pool.rs
